{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 18,
  "lineage": "d4024a9d-2411-1032-dca9-32b8ffbe794d",
  "resources": [
    {
      "module": "module.nodejs",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:subnet/subnet-046b92952ce519f52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 16378,
            "cidr_block": "192.168.128.0/18",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b92952ce519f52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720758062081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Attributes": "public",
              "Name": "symbiosis-dev-subnet-public-apse1a",
              "Namespace": "symbiosis",
              "Stage": "dev",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-046b1ecd264f43af1"
          }
        }
      ]
    },
    {
      "module": "module.nodejs",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0801a1e12f4a9ccc0",
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:instance/i-06c3a8e06ca8b4166",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "symbiosis-dev-ec2",
            "id": "i-06c3a8e06ca8b4166",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "symbiosis-dev-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024f578ed3e0ff202",
            "private_dns": "ip-192-168-171-234.ap-southeast-1.compute.internal",
            "private_ip": "192.168.171.234",
            "public_dns": "ec2-3-1-194-89.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.194.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:720758062081:key/84acdc44-b9c3-4c8b-a8b1-dea01a67a0d0",
                "throughput": 0,
                "volume_id": "vol-0fffcf4039ae7488f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046b92952ce519f52",
            "tags": {
              "Name": "symbiosis-dev-ec2",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "symbiosis-dev-ec2",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "symbiosis-dev-ec2",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "vpc_security_group_ids": [
              "sg-0ed6dc31f7c9ad5ab"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.generated",
            "module.aws_key_pair.aws_key_pair.imported",
            "module.aws_key_pair.tls_private_key.default",
            "module.nodejs.aws_iam_instance_profile.default",
            "module.nodejs.aws_iam_role.default",
            "module.nodejs.data.aws_ami.default",
            "module.nodejs.data.aws_ami.info",
            "module.nodejs.data.aws_iam_policy_document.default",
            "module.nodejs.data.aws_subnet.default",
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        }
      ]
    },
    {
      "module": "module.nodejs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:security-group/sg-0ed6dc31f7c9ad5ab",
            "description": "EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed6dc31f7c9ad5ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Managed by Terraform",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "220.255.65.0/24"
                ],
                "description": "Managed by Terraform",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "symbiosis-dev-ec2",
            "name_prefix": "",
            "owner_id": "720758062081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "symbiosis-dev-ec2",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "symbiosis-dev-ec2",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nodejs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress--1-0-65535-cbd201ed3b6029e1f305a433350cb74e",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Managed by Terraform",
            "from_port": 0,
            "id": "sgrule-1089389660",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ed6dc31f7c9ad5ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        },
        {
          "index_key": "ingress-tcp-22-22-ad14e77285fa34d18138f3cb8ab6043c",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "220.255.65.0/24"
            ],
            "description": "Managed by Terraform",
            "from_port": 22,
            "id": "sgrule-4169224826",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed6dc31f7c9ad5ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        },
        {
          "index_key": "ingress-tcp-3000-3000-38197096e8efaadaed562a8cd4c7d614",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Managed by Terraform",
            "from_port": 3000,
            "id": "sgrule-3756303775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed6dc31f7c9ad5ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        },
        {
          "index_key": "ingress-tcp-443-443-e1399ecf27790e71e4ce8612a3dedc88",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Managed by Terraform",
            "from_port": 443,
            "id": "sgrule-2138211624",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed6dc31f7c9ad5ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        },
        {
          "index_key": "ingress-tcp-80-80-54705488843219e55cc45d3f629db1dd",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Managed by Terraform",
            "from_port": 80,
            "id": "sgrule-3047504785",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ed6dc31f7c9ad5ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nodejs.module.security_group.aws_security_group.default",
            "module.nodejs.module.security_group.data.aws_security_group.external"
          ]
        }
      ]
    }
  ]
}